--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/animation/data_not_found.json
+    - assets/animation/empty.json
+    - assets/animation/error.json
+    - assets/animation/loading.json
+    - assets/animation/small_error.json
 
+  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
