--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   lottie: ^2.3.1
   share_plus: ^6.3.1
   url_launcher: ^6.1.10
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_test:
